# soukai-issue-creator

./: .env.example  README.md  issues.csv  pyproject.toml
src/: envs.py  issues.py  soukai-issue-creator.py  template.py
